# server-client

./: CMakeLists.txt  Readme.md
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  storage.cpp  storage.hpp
